--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,87 @@
+* {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+/* html {
+  background-color: darkseagreen;
+} */
+.app-name {
+  font-size: 2.3rem;
+}
+
+/* app box */
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: start;
+  width: 500px;
+  min-height: 440px;
+  /* background-color: #ffffff; */
+  background-color: rgba(227, 198, 198, 0.2);
+  text-align: center;
+  margin: 128px auto;
+  border-radius: 10px;
+  padding-bottom: 32px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-.App-link {
-  color: #61dafb;
+/* City Search  */
+.city-search {
+  width: 200px;
+  box-sizing: border-box;
+  border: 2px solid #ccc;
+  outline: none;
+  border-radius: 20px;
+  font-size: 16px;
+  background-color: white;
+  /* background-color: rgba(226, 226, 226, 0.6); */
+  background-image: url(./components/img/searchicon.jpg);
+  background-position: 10px 10px;
+  background-repeat: no-repeat;
+  padding: 12px 20px 12px 40px;
+  -webkit-transition: width 0.4s ease-in-out;
+  transition: width 0.4s ease-in-out;
+}
+.city-search:focus {
+  width: 60%;
+  /* background-color: white; */
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* city name */
+.city-name {
+  font-size: 1.25em;
+}
+h2 {
+  margin-bottom: 10px;
+}
+
+/* current date */
+.date {
+  font-size: 1.25em;
+  font-weight: 500;
+}
+
+/* weather icon and temp */
+.icon-temp {
+  font-size: 4rem;
+  font-weight: 700;
+  color: #1e2432;
+  text-align: center;
+}
+.deg {
+  font-size: 2rem;
+}
+
+/* weather description and wind speed */
+.des-wind {
+  font-weight: 500;
+}
+
+/* Error message */
+.error-message {
+  display: block;
+  text-align: center;
+  color: rgb(20, 2, 2);
+  font-size: 30px;
+  margin-top: auto;
 }
